--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 19,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -123,8 +123,6 @@
 					"pathName": "pages/my/my/my",
 					"query": "id=Opv5J3lW"
 				},
-
-
 				{
 					"id": 23,
 					"name": "活动签到",
@@ -142,6 +140,18 @@
 					"name": "他人项目详情",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "id=bpjJXqp9"
+				},
+				{
+					"id": -1,
+					"name": "报名身份确认",
+					"pathName": "activitySignIn/pages/signNoIndentity/signNoIndentity",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "创建爱你完成",
+					"pathName": "pages/myProject/publishSuccess/publishSuccess",
+					"query": "type=undefined&projectId=yrQVJV0v"
 				}
 			]
 		}
