--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -147,7 +147,17 @@
 					"pathName": "activitySignIn/pages/signNoIndentity/signNoIndentity",
 					"query": ""
 				},
-
+				{
+					"id": -1,
+					"name": "推送成功",
+					"pathName": "pages/myProject/pushToSuccess/pushToSuccess",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "推送成功",
+					"pathName": "pages/search/search2/search2",
+					"query": ""
 				}
 			]
 		}
