--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -85,7 +85,8 @@
     "pages/myProject/historyFiance/historyFiance",
     "pages/myProject/proBrand/proBrand",
     "pages/myProject/proTeam/proTeam",
-    "pages/myProject/proMilestone/proMilestone"
+    "pages/myProject/proMilestone/proMilestone",
+    "pages/aPage/aPage"
   ],
   "subPackages": [
     {
@@ -129,7 +130,8 @@
       }
     ],
     "selectedColor": "#40587A",
-    "borderStyle": "#fafafa",
+    "backgroundColor": "#fafafa",
+    "borderStyle":"white",
     "color": "#999999"
   },
   "networkTimeout": {
