--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,19 +25,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "活动签到",
 					"pathName": "activitySignIn/pages/signIndentityCard/signIndentityCard",
-					"query": "apply_id=8&&activity_id=1"
+					"query": "apply_id=2081&&activity_id=26"
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "活动签到确认",
 					"pathName": "activitySignIn/pages/signCheckIndentity/signCheckIndentity",
-					"query": "apply_id=8&&activity_id=1"
+					"query": "activity_id=1"
 				}
 			]
 		}
