--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,8 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
-
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -45,6 +44,12 @@
 					"name": "投资人不可卡",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "id=aWJxKMrY"
+				},
+				{
+					"id": -1,
+					"name": "产品",
+					"pathName": "pages/myProject/proBrand/proBrand",
+					"query": "user_id=vrny6QAp&project_id=2rzVKYr3"
 				}
 			]
 		}
