--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 6,
 			"list": [
 				{
 					"id": 0,
@@ -62,6 +62,12 @@
 					"name": "他人项目详情",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "id=yrQVxM0v&index=undefined&share_id=6WGmVvLr"
+				},
+				{
+					"id": -1,
+					"name": "他人详情",
+					"pathName": "pages/userDetail/networkDetail/networkDetail",
+					"query": "id=q0oxdoqW"
 				}
 			]
 		}
