--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -62,6 +62,24 @@
 					"name": "他人项目详情",
 					"pathName": "pages/projectDetail/projectDetail",
 					"query": "id=yrQVxM0v&index=undefined&share_id=6WGmVvLr"
+				},
+				{
+					"id": -1,
+					"name": "项目详情",
+					"pathName": "pages/projectDetail/projectDetail",
+					"query": "id=q0oXEQWe"
+				},
+				{
+					"id": 7,
+					"name": "一键尽调",
+					"pathName": "pages/oneKeyResearch/oneKeyResearch",
+					"query": "id=JWLV6Lr5&share_id=dW48yzLW"
+				},
+				{
+					"id": 8,
+					"name": "投资名片",
+					"pathName": "pages/userDetail/networkDetail/networkDetail",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
 				}
 			]
 		}
