--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -68,6 +68,12 @@
 					"name": "他人详情",
 					"pathName": "pages/userDetail/networkDetail/networkDetail",
 					"query": "id=q0oxdoqW"
+				},
+				{
+					"id": -1,
+					"name": "11",
+					"pathName": "pages/register/personInfo/personInfo",
+					"query": ""
 				}
 			]
 		}
