--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 7,
 			"list": [
 				{
 					"id": 0,
@@ -70,9 +70,9 @@
 					"query": "id=q0oxdoqW"
 				},
 				{
-					"id": -1,
-					"name": "11",
-					"pathName": "pages/register/personInfo/personInfo",
+					"id": 7,
+					"name": "发红包",
+					"pathName": "redPackets/pages/publishHB/publishHB",
 					"query": ""
 				}
 			]
