--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 13,
 			"list": [
 				{
 					"id": 0,
@@ -80,7 +80,36 @@
 					"name": "投资名片",
 					"pathName": "pages/userDetail/networkDetail/networkDetail",
 					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
-
+				},
+				{
+					"id": -1,
+					"name": "DD ",
+					"pathName": "pages/myHB/myHB",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
+				},
+				{
+					"id": -1,
+					"name": "DD ",
+					"pathName": "redPackets/pages/myHB/myHB",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
+				},
+				{
+					"id": -1,
+					"name": "DD ",
+					"pathName": "pages/discoverProject/discoverProject",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
+				},
+				{
+					"id": -1,
+					"name": "红包",
+					"pathName": "/redPackets/pages/myHB/myHB",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
+				},
+				{
+					"id": -1,
+					"name": "红包",
+					"pathName": "redPackets/pages/myHB/myHB",
+					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
 				}
 			]
 		}
