--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 14,
 			"list": [
 				{
 					"id": 0,
@@ -110,6 +110,11 @@
 					"name": "红包",
 					"pathName": "redPackets/pages/myHB/myHB",
 					"query": "id=6WGmVvLr&user_id=\"6pBNJJYp\""
+				},
+				{
+					"id": -1,
+					"name": "我的页面",
+					"pathName": "pages/my/my/my"
 				}
 			]
 		}
