--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": 7,
 			"list": [
 				{
 					"id": 0,
@@ -68,7 +68,12 @@
 					"name": "开过红包",
 					"pathName": "redPackets/pages/openedHB/openedHB",
 					"query": ""
-
+				},
+				{
+					"id": -1,
+					"name": "发布红包",
+					"pathName": "redPackets/pages/publishHB/publishHB",
+					"query": ""
 				}
 			]
 		}
