--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 6,
 			"list": [
 				{
 					"id": 0,
@@ -85,6 +85,36 @@
 					"id": -1,
 					"name": "发布红包",
 					"pathName": "redPackets/pages/publishHB/publishHB",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "开红包",
+					"pathName": "redPackets/pages/openHB/openHB",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "群详情",
+					"pathName": "redPackets/pages/crowDetail/crowDetail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "群详情",
+					"pathName": "redPackets/pages/crowdDetail/crowdDetail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "群详情",
+					"pathName": "redPackets/pages/crowDetail/crowDetail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "群详情",
+					"pathName": "redPackets/pages/crowdDetail/crowdDetail",
 					"query": ""
 				}
 			]
