--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,13 +25,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
 					"name": "名片分享页面",
 					"pathName": "pages/my/sharePage/sharePage",
 					"query": "share_id=e0qk38gp&user_id=vrny6QAp&is_redPackets=true"
+				},
+				{
+					"id": -1,
+					"name": "打开红包",
+					"pathName": "redPackets/pages/publishedHB/publishedHB",
+					"query": ""
 				}
 			]
 		}
