--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -50,6 +50,12 @@
 					"name": "publishedHB",
 					"pathName": "redPackets/pages/publishedHB/publishedHB",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "publishedHB",
+					"pathName": "redPackets/pages/publishedHB/publishedHB",
+					"query": "shareTicket=GblEJ0dKCN5Q5b2lBxp_pqtzN3Kw"
 				}
 			]
 		}
