--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,13 +25,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 0,
 			"list": [
 				{
 					"id": 0,
 					"name": "名片分享页面",
 					"pathName": "pages/my/sharePage/sharePage",
-					"query": "share_id=e0qk38gp&user_id=vrny6QAp&is_redPackets=true"
+					"query": "share_id=e0qk38gp&user_id=e0qk38gp&is_redPackets=true&unique_id=60946941116201041827214902"
 				},
 				{
 					"id": 1,
