--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -37,7 +37,7 @@
 					"id": 1,
 					"name": "openedHB",
 					"pathName": "redPackets/pages/openedHB/openedHB",
-					"query": "shareTicket=GblEJ0dKCN5Q5b2lBxp_pqtzN3Kw"
+					"query": "shareTicket=GblEJ0dKCN5Q5b2lBxp_pqtzN3Kw&unique_id=60946941116201041827214902"
 				},
 				{
 					"id": -1,
