--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -31,7 +31,13 @@
 					"id": 0,
 					"name": "名片分享页面",
 					"pathName": "pages/my/sharePage/sharePage",
-					"query": "share_id=e0qk38gp&user_id=e0qk38gp&is_redPackets=true&unique_id=60947003018501621827211785"
+					"query": "share_id=e0qk38gp&user_id=e0qk38gp&is_redPackets=true&unique_id=60947003018501621827211785",
+					"scene": "1044",
+					"shareInfo": {
+						"groupName": "测试模拟群1",
+						"shareName": "rDHe0AofXIZpmsWzgLNctyY-rZhQ82kJOowrjgm-Qsw@cr4dev",
+						"shareKey": "bpUcodjKK5Y_djykaA2wYEoXY7fhy1-lOfdgU7CsQgcxoegMBV2GGOSMX1XunAILJUyEfPHoqX7_yosgx8tF8Q~~"
+					}
 				},
 				{
 					"id": 1,
@@ -46,10 +52,10 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 3,
 					"name": "publishedHB",
 					"pathName": "redPackets/pages/publishedHB/publishedHB",
-					"query": ""
+					"query": "unique_id=60947031703321781827213631"
 				},
 				{
 					"id": -1,
