--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -86,6 +86,12 @@
 						"shareName": "rDHe0AofXIZpmsWzgLNctyY-rZhQ82kJOowrjgm-Qsw@cr4dev",
 						"shareKey": "bpUcodjKK5Y_djykaA2wYEoXY7fhy1-lOfdgU7CsQgcxoegMBV2GGOSMX1XunAILJUyEfPHoqX7_yosgx8tF8Q~~"
 					}
+				},
+				{
+					"id": -1,
+					"name": "crowdDetail",
+					"pathName": "redPackets/pages/crowdDetail/crowdDetail",
+					"query": "groupId=GblEJ0cs98HWB6SHmm4zqU2nrsq8"
 				}
 			]
 		}
