--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -31,7 +31,7 @@
 					"id": 0,
 					"name": "名片分享页面",
 					"pathName": "pages/my/sharePage/sharePage",
-					"query": "share_id=e0qk38gp&user_id=e0qk38gp&is_redPackets=true&unique_id=60947003018501621827211785",
+					"query": "share_id=e0qk38gp&user_id=e0qk38gp&is_redPackets=true&unique_id=60947910208773991827215014",
 					"scene": "1044",
 					"shareInfo": {
 						"groupName": "测试模拟群1",
@@ -43,7 +43,13 @@
 					"id": 1,
 					"name": "openedHB",
 					"pathName": "redPackets/pages/openedHB/openedHB",
-					"query": "shareTicket=GblEJ0cs98HWB6SHmm4zqU2nrsq8&unique_id=60946941116201041827214902"
+					"query": "unique_id=60946941116201041827214902",
+					"scene": "1044",
+					"shareInfo": {
+						"groupName": "测试模拟群1",
+						"shareName": "rDHe0AofXIZpmsWzgLNctyY-rZhQ82kJOowrjgm-Qsw@cr4dev",
+						"shareKey": "bpUcodjKK5Y_djykaA2wYEoXY7fhy1-lOfdgU7CsQgcxoegMBV2GGOSMX1XunAILJUyEfPHoqX7_yosgx8tF8Q~~"
+					}
 				},
 				{
 					"id": -1,
