--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -98,6 +98,12 @@
 					"name": "crowdDetail",
 					"pathName": "redPackets/pages/crowdDetail/crowdDetail",
 					"query": "groupId=GblEJ0cs98HWB6SHmm4zqU2nrsq8"
+				},
+				{
+					"id": -1,
+					"name": "注册-手机验证码",
+					"pathName": "pages/register/personInfo/personInfo",
+					"query": ""
 				}
 			]
 		}
