--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 9,
 			"list": [
 				{
 					"id": 0,
@@ -104,6 +104,11 @@
 					"name": "注册-手机验证码",
 					"pathName": "pages/register/personInfo/personInfo",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "注册-公司信息",
+					"pathName": "pages/register/companyInfo/companyInfo"
 				}
 			]
 		}
