--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 9,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -108,7 +108,8 @@
 				{
 					"id": -1,
 					"name": "注册-公司信息",
-					"pathName": "pages/register/companyInfo/companyInfo"
+					"pathName": "pages/register/companyInfo/companyInfo",
+					"query": ""
 				}
 			]
 		}
