--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Weitianshi/.idea/workspace.xml
 *.xml
 Weitianshi/.idea/workspace.xml
 Weitianshi/.idea/workspace.xml
+Weitianshi/.idea/workspace.xml
