--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 19,
 			"list": [
 				{
 					"id": 0,
@@ -122,6 +122,54 @@
 					"name": "多个红包",
 					"pathName": "pages/register/companyInfo/companyInfo",
 					"query": "unique_id=60952447941767761813912087"
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "/pages/oneKeyResearch/oneKeyResearch",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/oneKeyResearch/oneKeyResearch",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/discoverProject/discoverProject?id=EypO7pKQ",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/discoverProject/discoverProject",
+					"query": "id=EypO7pKQ"
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/oneKeyResearch/oneKeyResearch",
+					"query": "id=EypO7pKQ"
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/projectDetail/projectDetail",
+					"query": "id=A90kNr4w"
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/projectDetail/projectDetail",
+					"query": "id=6RpAmpx7"
+				},
+				{
+					"id": -1,
+					"name": "一键尽调",
+					"pathName": "pages/oneKeyResearch/oneKeyResearch",
+					"query": "id=6RpAmpx7"
 				}
 			]
 		}
