--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -25,7 +25,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 0,
 			"list": [
 				{
 					"id": -1,
@@ -37,6 +37,12 @@
 					"id": -1,
 					"name": "全局搜索",
 					"pathName": "pages/search/globalSearch/globalSearch",
+					"query": ""
+				},
+				{
+					"id": 2,
+					"name": "成员详情",
+					"pathName": "pages/bigData/memberDetail/index/index",
 					"query": ""
 				}
 			]
