--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -53,6 +53,7 @@
     "pages/my/identity/identityEdit/identityEdit",
     "pages/my/identity/identityResult/identityResult",
     "pages/my/my/my",
+    "pages/my/activityList/activityList",
     "pages/oneKeyResearch/oneKeyResearch",
     "pages/contactsActivty/activtyDetail/activtyDetail",
     "pages/contactsActivty/joinWarband/joinWarband",
