--- a/Weitianshi/project.config.json
+++ b/Weitianshi/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 45,
 			"list": [
 				{
 					"id": 0,
@@ -270,6 +270,66 @@
 					"name": "项目列表",
 					"pathName": "pages/my/activityList/activityList",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/signNoIndentity/signNoIndentity",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "/pages/register/personInfo/personInfo",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "pages/register/personInfo/personInfo",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "/activitySignIn/pages/signNoIndentity/signNoIndentity",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/signNoIndentity/signNoIndentity",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/publishActive/publishActive",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/activityDetail/activityDetail",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/activityDetail/activityDetail",
+					"query": "activity_id=21"
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/activityDetail/activityDetail",
+					"query": "activity_id=16"
+				},
+				{
+					"id": -1,
+					"name": "身份",
+					"pathName": "activitySignIn/pages/activityDetail/activityDetail",
+					"query": "activity_id=21"
 				}
 			]
 		}
