更该恢复签到

--- a/Weitianshi/app.json
+++ b/Weitianshi/app.json
@@ -98,7 +98,10 @@
         "pages/signNoIndentity/signNoIndentity",
         "pages/signUpList/signUpList",
         "pages/publishActive/publishActive",
-        "pages/projectList/projectList"
+        "pages/projectList/projectList",
+        "pages/activityIdentityInfo/activityIdentityInfo",
+        "pages/activityIdentitySuccess/activityIdentitySuccess",
+        "pages/activityProjectInfo/activityProjectInfo"
       ]
     },
     {
